test/error/OpEqualArrayStgInt.fu
public static class Test
{
	public static bool Run()
	{
		int[2] a;
		a[0] = 5;
		a[1] = 5;
		return a == 5; //ERROR: Cannot compare 'int[2]' with '5'
	}
}
